# madpine_engine

./: CMakeLists.txt  MainBehaviour.cpp  README.md
resources/: Camera.cpp  Camera.h  CreateWindow.cpp  CreateWindow.h  GameLoop.cpp  GameLoop.h  Render.cpp  Render.h  Triangle.cpp  Triangle.h
shaders/: frag.glsl  vert.glsl
